Videos page updated

--- a/pages/news.html
+++ b/pages/news.html
@@ -11,9 +11,9 @@
     function apiCall() {
            var params = {
                // Request parameters
-               "q": "car",
-               "q": "bike",
-               "count": "10",
+               "q": "automobile launch",
+              //  "q": "motorcycle",
+               "count": "12",
                "offset": "0",
                "mkt": "en-us",
                "safeSearch": "Moderate",
