--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/carousel.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/videos.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
