--- a/pages/news.html
+++ b/pages/news.html
@@ -23,7 +23,7 @@
                url: "https://api.cognitive.microsoft.com/bing/v5.0/news/search?" + $.param(params),
                beforeSend: function(xhrObj){
                    // Request headers
-                   xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key","SubscriptionKey");
+                   xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key","3b41557af1e7485398d69573b36b4f76");
                },
                type: "GET",
                // Request body
