--- a/pages/home.html
+++ b/pages/home.html
@@ -31,11 +31,26 @@
     </div>
 </div>
 
+<div class="row featureBox">
+  <div class="col-md-offset-1 col-md-3 col-sm-12 features" >
+    <a href="#" id="#newShow" >News</a>
+    <p>Check out all the latest news about automotive launches<p>
+  </div>
+  <div class=" col-md-3 col-sm-12 features">
+    <a href="#" id="#videoShow" >Videos</a>
+    <p>Watch videos showing reviews of latest launched vehicles</p>
+  </div>
+  <div class=" col-md-3 col-sm-12 features" >
+    <a href="#" id="#specShow" >Specifications</a>
+    <p>Check specifications of all the wheels of your desire </p>
+  </div>
+</div>
+
 
 <script type="text/javascript">
-$(document).ready(function(){
     // Activate carousel
     $("#myCarousel").carousel();
+
 
     // Enable carousel control
 	$(".left").click(function(){
@@ -55,5 +70,5 @@ $(document).ready(function(){
     $(".slide-three").click(function(){
     	$("#myCarousel").carousel(2);
     });
-});
+
 </script>
