--- a/pages/nav.html
+++ b/pages/nav.html
@@ -15,18 +15,18 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="#" id="homeShow">Home</a></li>
+                  <li class="active navElement"><a href="#" id="homeShow">Home</a></li>
                   <li class="dropdown">
-                     <a data-toggle="dropdown" id="dropdown-toggle" href="#">Explore <b class="caret"></b></a>
+                     <a data-toggle="dropdown" id="dropdown-toggle" class="navElement" href="#">Explore <b class="caret"></b></a>
                      <ul role="menu" class="dropdown-menu">
-                         <li><a href="#" id="newsShow">News</a></li>
+                         <li><a href="#" id="newsShow" >News</a></li>
                          <li class="divider"></li>
-                         <li><a href="#" id="videosShow">Videos</a></li>
+                         <li><a href="#" id="videosShow" >Videos</a></li>
                          <li class="divider"></li>
-                         <li><a href="#" id="specsShow">Check Specifications</a></li>
+                         <li><a href="#" id="specsShow" >Check Specifications</a></li>
                      </ul>
                  </li>
-                  <li><a href="#" id="contactShow">Contact</a></li>
+                  <li><a href="#" id="contactShow" class="navElement">Contact</a></li>
               </ul>
           </div>
       </div>
