--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/news.css">
     <link rel="stylesheet" href="../css/videos.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
