--- a/pages/newsItem.html
+++ b/pages/newsItem.html
@@ -5,7 +5,8 @@
         <h3 class="newsName">Loading News</h3>
     </div>
     <div class="readMoreButton">
-      <button class="btn btn-primary readMore">Read More</button>
+      <!-- <button class="btn btn-primary readMore">Read More</button> -->
+      <a href="#" class="readMore" >Read More</a>
     </div>
     <div class="newsDetail">
         <p class="newsDesc"></p><br>
